[package]
name = "tcr"
version = "0.1.0"
authors = ["Dan Miller <dan@dmiller.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0-pre.2"
# TODO(dmiller) Seems to me like this should be a dev dep but if I do that it doesn't compile.
mockall = "0.8.1"