[package]
name = "tcr"
version = "0.1.0"
authors = ["Dan Miller <dan@dmiller.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0-pre.3"
# TODO(dmiller) Seems to me like this should be a dev dep but if I do that it doesn't compile.
mockall = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.2"
ignore = "0.4.16"
regex = "1"
colored = "2"
itertools = "0.9.0"

[dev-dependencies]
tempdir = "0.3.7"